# invitebot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  history.txt
src/: bot.rs  env.rs  lib.rs  main.rs
src/commands/: donate.rs  help.rs  invite.rs  mod.rs  prelude.rs  progress.rs
src/db/: calls.rs  members.rs  mod.rs  rooms.rs  users.rs
src/db/migration/: calls.rs  invites.rs  members.rs  mod.rs  rooms.rs  users.rs
src/handlers/: auto_join.rs  message.rs  mod.rs  recovery.rs  update.rs
src/models/: call.rs  member.rs  mod.rs  room.rs  user.rs
src/utils/: id.rs  mod.rs
state_store_main.db/: matrix-sdk-crypto.sqlite3-shm  matrix-sdk-crypto.sqlite3-wal  matrix-sdk-event-cache.sqlite3-shm  matrix-sdk-event-cache.sqlite3-wal  matrix-sdk-media.sqlite3-shm  matrix-sdk-media.sqlite3-wal  matrix-sdk-state.sqlite3-shm  matrix-sdk-state.sqlite3-wal
state_store_scraper-1.db/: matrix-sdk-crypto.sqlite3-shm  matrix-sdk-crypto.sqlite3-wal  matrix-sdk-event-cache.sqlite3-shm  matrix-sdk-event-cache.sqlite3-wal  matrix-sdk-media.sqlite3-shm  matrix-sdk-media.sqlite3-wal  matrix-sdk-state.sqlite3-shm  matrix-sdk-state.sqlite3-wal
state_store_scraper-2.db/: matrix-sdk-crypto.sqlite3-shm  matrix-sdk-crypto.sqlite3-wal  matrix-sdk-event-cache.sqlite3-shm  matrix-sdk-event-cache.sqlite3-wal  matrix-sdk-media.sqlite3-shm  matrix-sdk-media.sqlite3-wal  matrix-sdk-state.sqlite3-shm
