[package]
name = "invitebot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenv = "0.15.0"
matrix-sdk = { version = "0.16.0", default-features = false, features = ["anyhow", "e2e-encryption", "rustls-tls"] }
nanoid = "0.4.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = "3.0.0"
surrealdb-types = "3.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "serde", "tracing", "tracing-serde"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
